# CSI-Toolkit

./: .dockerignore  .gitignore  Dockerfile  README.md  README_PACKAGE.md  collect.py  csi  docker-compose.yml  live_plot.py  pyproject.toml  requirements.txt
docs/: README.md
docs/developer-guide/: adding-features.md  adding-metrics.md  adding-models.md  architecture.md
docs/reference/: data-formats.md
docs/user-guide/: cli-reference.md  data-collection.md  feature-extraction.md  installation.md  machine-learning.md  quickstart.md  visualization.md
src/csi_toolkit/: __init__.py  __main__.py  main.py
src/csi_toolkit/collection/: __init__.py  config.py  serial_collector.py
src/csi_toolkit/core/: __init__.py  constants.py  exceptions.py  parser.py
src/csi_toolkit/io/: __init__.py  csv_reader.py  csv_writer.py  ssh_reader.py
src/csi_toolkit/ml/: __init__.py  utils.py
src/csi_toolkit/ml/evaluation/: __init__.py  evaluator.py
src/csi_toolkit/ml/inference/: __init__.py  live_predictor.py  predictor.py
src/csi_toolkit/ml/metrics/: __init__.py  classification.py  registry.py
src/csi_toolkit/ml/models/: __init__.py  base.py  registry.py  sklearn_models.py
src/csi_toolkit/ml/training/: __init__.py  trainer.py
src/csi_toolkit/processing/: __init__.py  amplitude.py  feature_extractor.py  features.py  windowing.py
src/csi_toolkit/processing/features/: __init__.py  basic.py  correlation.py  frequency.py  registry.py  statistical.py  subcarrier.py  temporal.py  utils.py
src/csi_toolkit/visualization/: __init__.py  data_plotter.py  filters.py  live_plotter.py
src/csi_toolkit/visualization/plots/: __init__.py  feature_plots.py  registry.py
